<resources>
    <array name="state">
        <item>在用</item>
        <item>闲置可用</item>
        <item>闲置可租</item>
        <item>闲置可售</item>
    </array>

    <string name="app_name">蓝猫</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="remember_pass">记住密码</string>
    <string name="sign_in">登录</string>
    <string name="create_account">没有账号？创建一个</string>
    <string name="user_info">个人信息</string>
    <string name="part_stock">备件库</string>
    <string name="machine_stock">整机库</string>
    <string name="material_stock">材料库</string>
    <string name="storage_info">库存品信息</string>
    <string name="stock_in">入库</string>
    <string name="stock_out">出库</string>
    <string name="search">查找</string>
    <string name="qr_make">生成二维码</string>
    <string name="settings">设置</string>
    <string name="sign_out">登出</string>
    <string name="scan_qrcode">扫描二维码</string>
    <string name="modify">修改</string>
    <string name="delete">删除</string>
    <string name="username_not_empty">用户名不能为空！</string>
    <string name="password_not_empty">密码不能为空！</string>
    <string name="sign_in_fail">用户名或密码错误</string>
    <string name="network_error">网络连接失败，请重新尝试</string>
    <string name="hint">提示</string>
    <string name="force_offline">该账号已被强制登出，请重新登录！</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="email">邮箱</string>
    <string name="confirm_password">确认密码</string>
    <string name="create_account_confirm">创建账号</string>
    <string name="already_have_account">已有账号？马上登录</string>
    <string name="sign_up">注册</string>
    <string name="homepage">主页</string>
    <string name="fill_userinfo">填写个人信息</string>
    <string name="modify_userinfo">修改个人信息</string>
    <string name="modify_password">修改密码</string>
    <string name="qrcode_result">生成二维码结果</string>
    <string name="material_detail">材料详细信息</string>
    <string name="modify_material_detail">修改材料详细信息</string>
    <string name="material_in_record">材料入库记录</string>
    <string name="material_out_record">材料出库记录</string>
    <string name="search_result">查找结果</string>
    <string name="part_detail">备件详细信息</string>
    <string name="modify_part_detail">修改备件详细信息</string>
    <string name="part_in_record">备件入库记录</string>
    <string name="part_out_record">备件出库记录</string>
    <string name="machine_detail">整机详细信息</string>
    <string name="modify_machine_detail">修改整机详细信息</string>
    <string name="machine_in_record">整机入库记录</string>
    <string name="machine_out_record">整机出库记录</string>
    <string name="username_too_long">用户名长度不能超过150个字符！</string>
    <string name="username_format_error">用户名格式错误！</string>
    <string name="email_not_empty">邮箱不能为空！</string>
    <string name="email_format_error">邮箱格式错误！</string>
    <string name="password_too_short">密码至少需要包含8个字符！</string>
    <string name="password_all_number">密码必须包含非数字字符！</string>
    <string name="password_different">前后密码不一致！</string>
    <string name="sign_up_fail">注册失败，请修改后重新尝试</string>
    <string name="password_too_simple">密码太简单！</string>
    <string name="email_been_registered">该邮箱已被注册！</string>
    <string name="username_been_registered">该用户名已被注册！</string>
    <string name="phone_not_empty">电话不能为空！</string>
    <string name="phone_too_long">电话长度不能超过20个字符！</string>
    <string name="phone_all_number">电话不能包含非数字字符！</string>
    <string name="company_not_empty">公司不能为空！</string>
    <string name="company_too_long">公司长度不能超过100个字符！</string>
    <string name="address_not_empty">地址不能为空！</string>
    <string name="address_too_long">地址长度不能超过100个字符！</string>
    <string name="phone">电话</string>
    <string name="company">公司</string>
    <string name="address">地址</string>
    <string name="submit">提交</string>
    <string name="material_storage_info">材料库库存品信息</string>
    <string name="material_in">材料入库</string>
    <string name="material_out">材料出库</string>
    <string name="material_search">材料查找</string>
    <string name="part_storage_info">备件库库存品信息</string>
    <string name="part_in">备件入库</string>
    <string name="part_out">备件出库</string>
    <string name="part_search">备件查找</string>
    <string name="machine_storage_info">整机库库存品信息</string>
    <string name="machine_in">整机入库</string>
    <string name="machine_out">整机出库</string>
    <string name="machine_search">整机查找</string>
    <string name="sure_to_sign_out">确定登出吗？</string>
    <string name="not_material_qr">非材料库二维码！</string>
    <string name="not_part_qr">非备件库二维码！</string>
    <string name="not_machine_qr">非整机库二维码！</string>
    <string name="qrcode_format_error">二维码格式错误！</string>
    <string name="camera_access">请授予相机权限以使用扫描二维码功能</string>
    <string name="modify_successful">修改成功！</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="modify_pass_successful">修改密码成功，请重新登录！</string>
    <string name="old_pass_invalid">原密码错误！</string>
    <string name="new_pass_too_simple">新密码太简单！</string>
    <string name="no_related_info">没有相关信息</string>
    <string name="user">用户</string>
    <string name="id">标号</string>
    <string name="type">类型</string>
    <string name="quantity">数量</string>
    <string name="previous_page">上一页</string>
    <string name="next_page">下一页</string>
    <string name="storage_state">库存状态</string>
    <string name="mark">型号</string>
    <string name="band">品牌</string>
    <string name="origin">原产地</string>
    <string name="year">年份</string>
    <string name="status_1">状况</string>
    <string name="location">位置</string>
    <string name="unit">单位原值</string>
    <string name="name">名称</string>
    <string name="manufacturer">制造企业</string>
    <string name="machine_name">整机名称</string>
    <string name="machine_type">整机型号</string>
    <string name="machine_band">整机品牌</string>
    <string name="vulnerability">易损性</string>
    <string name="storage_condition">储存条件</string>
    <string name="remarks">备注</string>
    <string name="in_record">入库记录</string>
    <string name="out_record">出库记录</string>
    <string name="warning">警告</string>
    <string name="delete_stock">确定删除该库存品吗？</string>
    <string name="delete_successful">删除成功！</string>
    <string name="id_star">标号*</string>
    <string name="in_use">在用</string>
    <string name="for_use">闲置可用</string>
    <string name="for_rent">闲置可租</string>
    <string name="for_sale">闲置可售</string>
    <string name="not_empty">不能为空！</string>
    <string name="too_long">长度不能超过100个字符！</string>
    <string name="check_and_modify">有字段填写错误，请检查并修改</string>
    <string name="part_id_exist">修改的备件标号与数据库中有重复！</string>
    <string name="no_related_info_found">没有找到相关记录！</string>
    <string name="modify_failed">修改失败，请重新尝试</string>
    <string name="not_number">该输入非数字！</string>
    <string name="num_too_long_8">数字不能超过8位！</string>
    <string name="decimal_6">小数点前不能超过6位！</string>
    <string name="decimal_2">小数点后不能超过2位！</string>
    <string name="year_format_error">格式错误，正确格式如2000-01-01！</string>
    <string name="in_date">入库时间</string>
    <string name="operator">操作人员</string>
    <string name="in_quantity">入库数量</string>
    <string name="in_remarks">入库备注</string>
    <string name="out_date">出库时间</string>
    <string name="part_out_user">备件去向</string>
    <string name="out_quantity">出库数量</string>
    <string name="remain">剩余数量</string>
    <string name="out_remarks">出库备注</string>
    <string name="fill_in_info">请填写入库信息</string>
    <string name="in_date_star">入库时间*</string>
    <string name="operator_star">操作人员*</string>
    <string name="in_quantity_star">入库量*</string>
    <string name="stock_in_successful">入库成功！</string>
    <string name="stock_in_failed">入库失败，请修改后重新尝试</string>
    <string name="not_integer">该输入非整数！</string>
    <string name="large_than_num">数字不能大于2147483647！</string>
    <string name="fill_out_info">请填写出库信息</string>
    <string name="part_id_star">备件标号*</string>
    <string name="out_date_star">出库时间*</string>
    <string name="part_user_star">备件去向*</string>
    <string name="out_quantity_star">出库量*</string>
    <string name="stock_out_successful">出库成功！</string>
    <string name="part_not_exist">出库失败，该备件不存在！</string>
    <string name="no_enough_storage">出库失败，库存余量不足！</string>
    <string name="date_start">起始年份</string>
    <string name="date_end">终止年份</string>
    <string name="search_condition_empty">查找条件不能为空！</string>
    <string name="year_format_error_2">时间格式错误，正确格式如2000-01-01！</string>
    <string name="run_time">工作小时</string>
    <string name="machine_id_exist">修改的整机标号与数据库中有重复！</string>
    <string name="machine_out_user">整机去向</string>
    <string name="machine_id_star">整机标号*</string>
    <string name="machine_user_star">整机去向*</string>
    <string name="machine_not_exist">出库失败，该整机不存在！</string>
    <string name="status_2">状态</string>
    <string name="in_remarks_2">入库备注</string>
    <string name="unit_star">单位原值*</string>
    <string name="material_id_exist">修改的材料标号与数据库中有重复！</string>
    <string name="material_out_user">材料去向</string>
    <string name="material_id_star">材料标号*</string>
    <string name="material_user_star">材料去向*</string>
    <string name="material_not_exist">出库失败，该材料不存在！</string>
    <string name="choose_warehouse">选择仓库</string>
    <string name="generate">生成</string>
    <string name="part_choose">备件库</string>
    <string name="machine_choose">整机库</string>
    <string name="material_choose">材料库</string>
    <string name="save_qrcode">保存二维码</string>
    <string name="save_successful">保存成功！图片已保存至根目录下的\"BlueCatFiles\"文件夹中</string>
    <string name="save_failed">保存失败！</string>
    <string name="save_failed_and_need_permission">保存失败！请授予文件写入权限以使用保存二维码功能</string>
    <string name="language">语言</string>
    <string name="switch_language">确定要切换语言吗</string>
    <string name="serial_num">编号</string>
</resources>
