<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_userinfo"
            android:icon="@drawable/menu_user"
            android:title="@string/user_info" />

        <item
            android:id="@+id/menu_part"
            android:icon="@drawable/menu_part"
            app:actionLayout="@layout/custom_menu_part"
            android:checkable="false"
            android:title="@string/part_stock" />

        <item
            android:id="@+id/menu_partsto"
            android:title="@string/storage_info" />

        <item
            android:id="@+id/menu_partin"
            android:title="@string/stock_in" />

        <item
            android:id="@+id/menu_partout"
            android:title="@string/stock_out" />

        <item
            android:id="@+id/menu_partsearch"
            android:title="@string/search" />

        <item
            android:id="@+id/menu_equip"
            android:icon="@drawable/menu_equip"
            app:actionLayout="@layout/custom_menu_equip"
            android:checkable="false"
            android:title="@string/machine_stock" />

        <item
            android:id="@+id/menu_equipsto"
            android:title="@string/storage_info" />

        <item
            android:id="@+id/menu_equipin"
            android:title="@string/stock_in" />

        <item
            android:id="@+id/menu_equipout"
            android:title="@string/stock_out" />

        <item
            android:id="@+id/menu_equipsearch"
            android:title="@string/search" />

        <item
            android:id="@+id/menu_mat"
            android:icon="@drawable/menu_mat"
            app:actionLayout="@layout/custom_menu_mat"
            android:checkable="false"
            android:title="@string/material_stock" />

        <item
            android:id="@+id/menu_matsto"
            android:title="@string/storage_info" />

        <item
            android:id="@+id/menu_matin"
            android:title="@string/stock_in" />

        <item
            android:id="@+id/menu_matout"
            android:title="@string/stock_out" />

        <item
            android:id="@+id/menu_matsearch"
            android:title="@string/search" />

        <item
            android:id="@+id/menu_qrmake"
            android:icon="@drawable/menu_qr"
            android:title="@string/qr_make" />

        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/menu_logout"
            android:title="@string/sign_out" />

    </group>

</menu>