<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <!--
            <ImageView
                android:src="@drawable/in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />
                -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/fill_in_info"
                android:textSize="25dip"
                android:textColor="@color/black" />

            <!-- MaterialID -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_id_matin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_id_matin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/id_star" />

            </android.support.design.widget.TextInputLayout>

            <!-- Type -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_type_matin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_type_matin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/type" />

            </android.support.design.widget.TextInputLayout>

            <!-- StoreState -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="4dp"
                android:textSize="18dp"
                android:text="@string/storage_state" />

            <Spinner
                android:id="@+id/spinner_state_matin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/state"
                android:spinnerMode="dialog" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="#668B8B" />

            <!-- Mark -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_mark_matin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_mark_matin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/mark" />

            </android.support.design.widget.TextInputLayout>

            <!-- Band -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_band_matin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_band_matin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/band" />

            </android.support.design.widget.TextInputLayout>

            <!-- Original -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_original_matin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_original_matin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/origin" />

            </android.support.design.widget.TextInputLayout>

            <!-- Year -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_year_matin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_year_matin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:digits="0123456789-"
                    android:hint="@string/year" />

            </android.support.design.widget.TextInputLayout>

            <!-- State -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_state_matin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_state_matin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/status_2" />

            </android.support.design.widget.TextInputLayout>

            <!-- Position -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_position_matin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_position_matin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/location" />

            </android.support.design.widget.TextInputLayout>

            <!-- Unit -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_unit_matin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_unit_matin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:digits="0123456789."
                    android:hint="@string/unit_star" />

            </android.support.design.widget.TextInputLayout>

            <!-- Description -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_description_matin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_description_matin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/remarks" />

            </android.support.design.widget.TextInputLayout>

            <!-- DateTime -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_datetime_matin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_date_matin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:digits="0123456789-"
                    android:hint="@string/in_date_star" />

            </android.support.design.widget.TextInputLayout>

            <!-- Operator -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_operator_matin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_operator_matin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/operator_star" />

            </android.support.design.widget.TextInputLayout>

            <!-- Num -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_num_matin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_num_matin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:digits="0123456789."
                    android:hint="@string/in_quantity_star" />

            </android.support.design.widget.TextInputLayout>

            <!-- InputDescription -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_inputdescription_matin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_inputdescription_matin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/in_remarks_2" />

            </android.support.design.widget.TextInputLayout>

            <ProgressBar
                android:id="@+id/progressbar_matin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_submit_matin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="30dp"
                android:padding="12dp"
                android:text="@string/stock_in" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>