<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_modifymatdetail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <!-- MaterialID -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_id_matdetail_modify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_id_matdetail_modify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/id_star" />

            </android.support.design.widget.TextInputLayout>

            <!-- Type -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_type_matdetail_modify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_type_matdetail_modify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/type" />

            </android.support.design.widget.TextInputLayout>

            <!-- StoreState -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="4dp"
                android:textSize="18dp"
                android:text="@string/storage_state" />

            <Spinner
                android:id="@+id/spinner_state_matdetail_modify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/state"
                android:spinnerMode="dialog" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="#668B8B" />

            <!-- Mark -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_mark_matdetail_modify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_mark_matdetail_modify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/mark" />

            </android.support.design.widget.TextInputLayout>

            <!-- Band -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_band_matdetail_modify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_band_matdetail_modify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/band" />

            </android.support.design.widget.TextInputLayout>

            <!-- Original -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_original_matdetail_modify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_original_matdetail_modify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/origin" />

            </android.support.design.widget.TextInputLayout>

            <!-- Year -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_year_matdetail_modify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_year_matdetail_modify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:digits="0123456789-"
                    android:hint="@string/year" />

            </android.support.design.widget.TextInputLayout>

            <!-- State -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_state_matdetail_modify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_state_matdetail_modify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/status_2" />

            </android.support.design.widget.TextInputLayout>

            <!-- Position -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_position_matdetail_modify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_position_matdetail_modify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/location" />

            </android.support.design.widget.TextInputLayout>

            <!-- Unit -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_unit_matdetail_modify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_unit_matdetail_modify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:digits="0123456789."
                    android:hint="@string/unit_star" />

            </android.support.design.widget.TextInputLayout>

            <!-- Description -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_description_matdetail_modify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/input_description_matdetail_modify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/remarks" />

            </android.support.design.widget.TextInputLayout>

            <ProgressBar
                android:id="@+id/progressbar_matdetail_modify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="24dp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_submit_matdetail_modify"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/submit" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>